--- a/.github/workflows/ssh.yml
+++ b/.github/workflows/ssh.yml
@@ -1,5 +1,5 @@
 - name: Test SSH connection
-  uses: appleboy/ssh-action@master
+  uses: appleboy/ssh-action@main
   with:
     host: ${{ secrets.HOST }}
     username: ${{ secrets.USER }}
